welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:5: error: '(' expected but 'else' found.
	if else(tea>=5 && candy>=5)
           ^