welcome.lessons.welcome.bat.bool2.TeaParty.scala.code
def teaParty(tea:Int, candy:Int): Int = 
{
	if(tea<5 || candy<5)
		return 0
	if else(tea>=5 && candy>=5)
	{
		if(tea<=candy*5 || candy<=tea*5)
			return 2
		else return 0
	}
}
